--- a/package.json
+++ b/package.json
@@ -12,17 +12,26 @@
   "dependencies": {
     "@astrojs/check": "^0.9.6",
     "@astrojs/mdx": "^4.3.13",
+    "@fontsource-variable/noto-serif": "^5.2.9",
     "@fontsource-variable/stix-two-text": "^5.2.8",
+    "@fontsource/iosevka": "^5.2.5",
     "@myriaddreamin/rehype-typst": "0.7.0-rc2",
+    "@myriaddreamin/typst-ts-node-compiler": "0.7.0-rc2",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/hast": "^3.0.4",
     "@types/mdast": "^4.0.4",
     "astro": "^5.16.6",
+    "hast-util-from-html-isomorphic": "^2.0.0",
+    "hast-util-to-text": "^4.0.2",
     "mdast-util-directive": "^3.1.0",
+    "rehype-external-links": "^3.0.0",
     "remark-directive": "^4.0.0",
+    "remark-extended-table": "^2.0.3",
     "remark-math": "^6.0.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "unist-util-visit": "^5.0.0",
+    "unist-util-visit-parents": "^6.0.2",
     "vfile": "^6.0.3"
   },
   "devDependencies": {
