--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "rehype-external-links": "^3.0.0",
     "remark-directive": "^4.0.0",
     "remark-extended-table": "^2.0.3",
+    "remark-interlinear-gloss": "^1.0.3",
     "remark-math": "^6.0.0",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
